# Mitz

./: .gitignore  GMM  GMM percent  README.md  pyproject.toml
src/mitz/: mitz.py  model.py  pipeline.py
