[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "mitz"
version = "0.1.0"
description = "Mitz: internal-reference XGBoost + Triplet ensemble scoring for hijacking-like states"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hoyoung Jeong" }]
keywords = ["single-cell", "scanpy", "xgboost", "pytorch", "triplet", "mitochondria"]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "xgboost>=1.7",
  "torch>=2.0",
  "scanpy>=1.9",
  "anndata>=0.9",
]

[project.optional-dependencies]
shap = ["shap>=0.43"]
viz = ["graphviz>=0.20"]

dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.7",
]

[project.scripts]
mitz-invitro = "mitz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mitz"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
